# alurareceitas

./: README.md  pyproject.toml
alurareceita/: settings.py
apps/receitas/: models.py  settings.py  urls.py
apps/receitas/migrations/: 0002_receita_pessoa.py  0005_auto_20210319_1706.py
apps/receitas/views/: busca.py  receita.py
apps/usuarios/: views.py
templates/partials/: _menu.html
templates/receitas/: index.html
templates/usuarios/: dashboard.html  login.html
